<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_vertical_margin"
    tools:context=".fragment.OptionDialogFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text = "@string/question_coach" />

    <RadioGroup
        android:id="@+id/radio_group_option"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radio_button_saf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sir_alex_ferguson"/>
        <RadioButton
            android:id="@+id/radio_button_mou"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/jose_mourinho"/>
        <RadioButton
            android:id="@+id/radio_button_lvg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/louis_van_gaal"/>
        <RadioButton
            android:id="@+id/radio_button_moyes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/david_moyes"/>
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_tutup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:text="@string/close"/>
        <Button
            android:id="@+id/btn_pilih"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:text="@string/choose"/>
    </LinearLayout>

</LinearLayout>