<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/intent"
        android:textColor="@android:color/black"
        android:textAllCaps="true"
        android:gravity="center"
        android:textSize="30dp"/>

    <Button
        android:id="@+id/btn_intent_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/intent_dengan_data"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/btn_intent_object"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/intent_dengan_object"/>

    <Button
        android:id="@+id/btn_intent_dial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/intent_dial_number"/>

    <Button
        android:id="@+id/btn_intent_hasil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/intent_untuk_hasil"/>

    <TextView
        android:id="@+id/hasil_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hasil_dari_activity"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:textSize="20dp"
        android:textColor="@android:color/black"
        android:gravity="center"/>
</LinearLayout>