<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_latihan_volume"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menghitung_volume"
        android:textColor="@android:color/black"
        android:gravity="center"/>

    <Button
        android:id="@+id/btn_latihan_intent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/intent"
        android:textColor="@android:color/black"
        android:gravity="center"/>

    <Button
        android:id="@+id/btn_latihan_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/latihan_fragment"
        android:textColor="@android:color/black"
        android:gravity="center"/>

    <Button
        android:id="@+id/btn_view_vgroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/latihan_view_dan_view_group"
        android:textColor="@android:color/black"
        android:gravity="center"/>

    <Button
        android:id="@+id/btn_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/latihan_recycler_view"
        android:textColor="@android:color/black"
        android:gravity="center"/>

</LinearLayout>