<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:padding="@dimen/activity_horizontal_margin">
        <ImageView
            android:id="@+id/item_presiden"
            android:layout_width="150dp"
            android:layout_height="220dp"
            tools:src="@color/colorAccent"/>
        <TextView
            android:id="@id/item_name"
            android:layout_toRightOf="@id/item_presiden"
            android:layout_toEndOf="@id/item_presiden"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/activity_vertical_margin"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            tools:text="Ir.Soekarno"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"/>
        <TextView
            android:id="@+id/item_remarks"
            android:layout_toRightOf="@id/item_presiden"
            android:layout_toEndOf="@id/item_presiden"
            android:layout_below="@id/item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/presiden_pertama_ri"
            android:textSize="@dimen/activity_vertical_margin"
            android:textColor="@android:color/black"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/item_presiden"
            android:layout_toEndOf="@id/item_presiden"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:layout_marginStart="@dimen/activity_vertical_margin">
            <Button
                android:id="@+id/btn_favorite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/favorite"/>
            <Button
                android:id="@+id/btn_share"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/share"/>
        </LinearLayout>
    </RelativeLayout>
</android.support.v7.widget.CardView>